[gd_scene load_steps=2 format=3 uid="uid://inventory_ui"]

[ext_resource type="Script" path="res://src/ui/inventory_ui.gd" id="1_inventory_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.3, 0.4, 1)

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_inventory_ui")
slots_per_row = 6
slot_size = 64
slot_spacing = 4

[node name="InventoryPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -250.0
offset_right = 470.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="InventoryPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="InventoryPanel/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="InventoryPanel/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SlotsContainer" type="GridContainer" parent="InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 6
